--- a/წესები_და_პირობები.html
+++ b/წესები_და_პირობები.html
@@ -5,6 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>წესები და პირობები</title>
-   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfZhJYx8ds2zU0SDf35AzQrFRs1UMnjqqGwm0VkDlMyoxOMww/viewform?embedded=true" width="640" height="3488" frameborder="0" marginheight="0" marginwidth="0">მიმდინარეობს ჩატვირთვა…</iframe>
+   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfZhJYx8ds2zU0SDf35AzQrFRs1UMnjqqGwm0VkDlMyoxOMww/viewform?embedded=true" width="80%" height="100%" frameborder="0" marginheight="0" marginwidth="0">მიმდინარეობს ჩატვირთვა…</iframe>
   </body>
 </html>
