--- a/წესები_და_პირობები.html
+++ b/წესები_და_პირობები.html
@@ -9,8 +9,12 @@
       body {
         padding: 35px;
       }
+      h2{
+        font-size: 48px;
+      }
       .text {
         width: 80%;
+        font-size: 30px;
       }
       .text p {
         white-space: wrap;
@@ -23,7 +27,7 @@
       <p>
         ინფორმაცია თურქული ფეხსაცმლის ონლაინ მაღაზია მოვაჭრე მილენა აკოფოვი
         01611098073 <br />თბილისი ჭიჭინაძის 44 Brandshoes99@mail.ru 579406672
-        GE77TB7558645064300018 <br /><br />წესები და პირობები <br /><br />
+        GE77TB7558645064300018 <br /><br /><b>წესები და პირობები</b> <br /><br />
         მოვაჭრის ვალდებულებები
         <br /><br />• მოვაჭრე ვალდებულია მომხმარებელს გადასცეს ხელშეკრულებით
         გათვალისწინებული პირობების შესაბამისი საქონელი. <br />
