--- a/წესები_და_პირობები.html
+++ b/წესები_და_პირობები.html
@@ -28,7 +28,7 @@
         ინფორმაცია თურქული ფეხსაცმლის ონლაინ მაღაზია მოვაჭრე მილენა აკოფოვი
         01611098073 <br />თბილისი ჭიჭინაძის 44 Brandshoes99@mail.ru 579406672
         GE77TB7558645064300018 <br /><br /><b>წესები და პირობები</b> <br /><br />
-        მოვაჭრის ვალდებულებები
+        <b>მოვაჭრის ვალდებულებები</b>
         <br /><br />• მოვაჭრე ვალდებულია მომხმარებელს გადასცეს ხელშეკრულებით
         გათვალისწინებული პირობების შესაბამისი საქონელი. <br />
         • საქონელი ხელშეკრულებით გათვალისწინებული პირობების შესაბამის საქონლად
@@ -39,7 +39,7 @@
         შემთხვევაში საქონელი ხელშეკრულებით გათვალისწინებული პირობების შესაბამის
         საქონლად მიიჩნევა, თუ იგი გამოსადეგია იმ მიზნისთვის, რომლის თაობაზედაც
         მომხმარებელმა მოვაჭრეს ხელშეკრულების დადების დროს აცნობა და რომელსაც
-        მოვაჭრე დაეთანხმა. მომხმარებლის უფლებები (კანონისმიერი გარანტია) <br />
+        მოვაჭრე დაეთანხმა. <br/><br/><b>მომხმარებლის უფლებები (კანონისმიერი გარანტია)</b> <br /></br/>
         • თუ საქონელი ნაკლის მქონე აღმოჩნდა, მომხმარებელს უფლება აქვს, მოვაჭრეს
         მოსთხოვოს ნაკლის აღმოფხვრა (საქონლის უსასყიდლოდ შეკეთება ან შეცვლა,
         ფასის შემცირება) ან გავიდეს ხელშეკრულებიდან. <br />
@@ -73,14 +73,14 @@
         საქონლის ნაკლის მომხმარებლისთვის შეფერხების შექმნის გარეშე აღმოფხვრის
         ალტერნატიული შესაძლებლობა. <br /><br />• მომხმარებელს უფლება აქვს,
         ისარგებლოს ზემოხსენებული უფლებებით, თუ საქონლის ნაკლი საქონლის მისთვის
-        გადაცემიდან 2 წლის განმავლობაში აღმოჩნდა. მხარეთა პასუხისმგებლობა
-        <br />• თითოეულ მხარეს უფლება აქვს მოსთხოვოს მეორე მხარეს ნაკისრი
+      გადაცემიდან 2 წლის განმავლობაში აღმოჩნდა.<br/><br/><b>მხარეთა პასუხისმგებლობა</b>
+       <br/> <br />• თითოეულ მხარეს უფლება აქვს მოსთხოვოს მეორე მხარეს ნაკისრი
         ვალდებულებათა სრული, ჯეროვანი და კეთილსინდისიერი შესრულება. <br />•
         მხარეები იღებენ ვალდებულებას აუნაზღაურონ ერთმანეთს მათ მიერ ნაკისრ
         ვალდებულებათა სრულად ან ნაწილობრივ შეუსრულებლობის ან არაჯეროვნად
         შესრულების შედეგად მიყენებული ზიანი კანონმდებლობით დადგენილი წესით, ხოლო
         ზიანის ანაზღაურება მხარეებს არ ათავისუფლებს ნაკისრი ვალდებულებების
-        შესრულებისგან. შეკვეთის მიღება <br />• მომხმარებელს ნივთის შეძენა
+  შესრულებისგან. <br></br><b>შეკვეთის მიღება</b> <br/><br />• მომხმარებელს ნივთის შეძენა
         შეუძლია თანხის გადარიცხვით GE77TB7558645064300018 მითითებულ საბანკო
         ანგარიშზე. ასევე, შესაძლებელია ნივთის ღირებულების კურიერთან ნაღდი
         ანგარიშსწორების გზით გადახდა. <br />• მოვაჭრე, საბანკო ანგარიშზე თანხის
@@ -98,8 +98,11 @@
         მოსთხოვს ზიანის ანაზღაურებას. აღნიშნული არ ართმევს დამკვეთს უფლებას
         პირადად აწარმოოს დავა გადამზიდ კომპანიასთან. <br />• მოვაჭრე ვალდებულია
         მოთხოვნის შემთხვევაში გადასცეს დამკვეთს შეკვეთასთან დაკავშირებული ყველა
-        საბუთი. მიწოდების საფასური თბილისი 7 ლარი რეგიონი 10 ლარი დაბრუნების
-        პოლიტიკა <br />• „მომხმარებლის უფლებების დაცვის შესახებ“ საქართველოს
+საბუთი. <br/><br/><b>მოწოდების საფასური</b></br> თბილისი 7 ლარი, რეგიონი 10 ლარი <br/><br/><b>დაბრუნების
+  პოლიტიკა</b> <br /><br/>
+        <b>ყოველგვარი საფუძვლის მითითების ხელშეკრულებაზე უარის თქმასთან დაკავშირებული გამონაკლისი</b>
+        </br></br>
+        • „მომხმარებლის უფლებების დაცვის შესახებ“ საქართველოს
         კანონის მე-13 მუხლის თანახმად, ამავე კანონის მე-14 მუხლით დადგენილი
         გამონაკლისების გარდა, მომხმარებელს უფლება აქვს, ყოველგვარი საფუძვლის
         მითითების გარეშე თქვას უარი დისტანციურ ხელშეკრულებაზე ან/და სარეწის
@@ -114,7 +117,7 @@
         (განსაზღვრული პერიოდულობით) მიწოდების ხელშეკრულების შემთხვევაში −
         მომხმარებლის ან მის მიერ განსაზღვრული მესამე პირის მიერ (გარდა
         გადამზიდავისა) ნივთის მფლობელობაში პირველად მიღებიდან.
-        <br /><br />დაბრუნების პირობები <br /><br />• მომხმარებელს უფლება აქვს
+<br /><br /><b>დაბრუნების პირობები</b> <br /><br />• მომხმარებელს უფლება აქვს
         ნივთის ჩაბარებიდან 14 კალენდარული დღის განმავლობაში დააფიქსიროს მოთხოვნა
         შეძენილი ნივთის უკან დაბრუნების თაობაზე. ვადა აითვლება მომხმარებლისთვის
         ნივთის მფლობელობაში გადაცემის მომენტიდან. ამ ვადის გასვლასთან ერთად,
@@ -149,10 +152,10 @@
         უბრუნდებათ. ყოველგვარი საფუძვლის მითითების გარეშე ხელშეკრულებაზე უარის
         თქმასთან დაკავშირებული გამონაკლისი <br />• მომხმარებელს არ აქვს უფლება,
         უარი თქვას იმ საქონელზე ან მომსახურებაზე, რომლის ფასი 30 ლარს არ
-        აღემატება. <br />ფორს–მაჟორი <br />• არც ერთი მხარე არ აგებს პასუხს
+        აღემატება. <br /><br/><b>ფორს–მაჟორი</b><br/> <br />• არც ერთი მხარე არ აგებს პასუხს
         ნაკისრი ვალდებულების მთლიანად ან ნაწილობრივ შეუსრულებლობისთვის, თუ
         შეუსრულებლობა გამოწვეულია სტიქიური და ტექნოლოგიური კატასტროფებით,
-        ხანძრით, საომარი მოქმედებით, სამთავრობო გადაწყვეტილებებით, სოციალური
+        ხანძრით, საომარი მოქმედებით, სამთავრობო გადაწყვეტილებებით, სოციალური<b
         აფეთქებებით და ეს მოვლენები დაიწყო ან განვითარდა შეკვეთის შეძენის
         შემდეგ. <br />• თუ ჩამოთვლილი გარემოებებიდან უშუალოდ რომელიმე მოქმედებს
         მხარის მიერ ნაკისრი ვალდებულებების წინამდებარე სამომხმარებლო წესებისა და
