--- a/წესები_და_პირობები.html
+++ b/წესები_და_პირობები.html
@@ -73,7 +73,7 @@
         საქონლის ნაკლის მომხმარებლისთვის შეფერხების შექმნის გარეშე აღმოფხვრის
         ალტერნატიული შესაძლებლობა. <br /><br />• მომხმარებელს უფლება აქვს,
         ისარგებლოს ზემოხსენებული უფლებებით, თუ საქონლის ნაკლი საქონლის მისთვის
-      გადაცემიდან 2 წლის განმავლობაში აღმოჩნდა.<br/><br/><b>მხარეთა პასუხისმგებლობა</b>
+      გადაცემიდან 2 წლის განმავლობაში აღმოჩნდა.<br/><br/>• თუ მომხმარებელმა საქონლის ნაკლი საქონლის მფლობელობაში მიღებიდან 6 თვის განმავლობაში აღმოაჩინა, საწინააღმდეგოს დამტკიცებამდე იგულისხმება, რომ ნაკლი არსებობდა საქონლის მიწოდებისას, თუ, საქონლის ბუნებიდან ან ნაკლის ხასიათიდან გამომდინარე, ეს შესაძლებელია. ამ შემთხვევაში მტკიცების ტვირთი მოვაჭრეს ეკისრება. თუ მომხმარებელმა საქონლის ნაკლი საქონლის მფლობელობაში მიღებიდან 6 თვის შემდეგ აღმოაჩინა, იმის მტკიცების ტვირთი, რომ ნაკლი არსებობდა საქონლის მიწოდებისას, მომხმარებელს ეკისრება.<br/><br/><b>მხარეთა პასუხისმგებლობა</b>
        <br/> <br />• თითოეულ მხარეს უფლება აქვს მოსთხოვოს მეორე მხარეს ნაკისრი
         ვალდებულებათა სრული, ჯეროვანი და კეთილსინდისიერი შესრულება. <br /><br/>•
         მხარეები იღებენ ვალდებულებას აუნაზღაურონ ერთმანეთს მათ მიერ ნაკისრ
@@ -90,13 +90,9 @@
         დღეს. <br /><br/>• შეკვეთა დასრულებულად ითვლება ნივთის მომხმარებლისთვის
         ჩაბარებისთანავე. <br /><br/>• მომხმარებლისთვის ნივთის მიწოდების შეუძლებლობის
         შემთხვევაში შეკვეთა გაუქმდება და კლიენტს დაუბრუნდება მის მიერ გადახდილი
-        თანხა. Avo Pexsacmeli Shekvetit Brand Avo <br /><br/>• მომხმარებელი
+        თანხა. <br /><br/>• მომხმარებელი
         ვალდებულია, შეკვეთის მიღებისას მოახდინოს მისი ხარისხისა და
-        მახასიათებლების შემოწმება. <br /><br/>• ტრანსპორტირების დროს შეკვეთის
-        დაზიანებისა თუ დაღუპვის შემთხვევაში, მოვაჭრე დამკვეთის დავალებით
-        მიმართავს გადამზიდ კომპანიას და ხელშეკრულების პირობების გათვალისწინებით
-        მოსთხოვს ზიანის ანაზღაურებას. აღნიშნული არ ართმევს დამკვეთს უფლებას
-        პირადად აწარმოოს დავა გადამზიდ კომპანიასთან. <br /><br/>• მოვაჭრე ვალდებულია
+        მახასიათებლების შემოწმება. <br /><br/>• მოვაჭრე ვალდებულია
         მოთხოვნის შემთხვევაში გადასცეს დამკვეთს შეკვეთასთან დაკავშირებული ყველა
 საბუთი. <br/><br/><b>მოწოდების საფასური</b></br> თბილისი 7 ლარი, რეგიონი 10 ლარი <br/><br/><b>დაბრუნების
   პოლიტიკა</b> <br /><br/>
